add new pom.xml updated by Safer